# set-9

./: CMakeLists.txt  README.md
data/: environment.txt  results.csv  summary_at_3000.csv
data/generated_arrays/: common_prefix_3000.txt  nearly_sorted_3000.txt  random_3000.txt  reverse_3000.txt
data/raw/: README.md  results.csv.gz.b64.part00  results.csv.gz.b64.part01  results.csv.gz.b64.part02  results.csv.gz.b64.part03  results.csv.gz.b64.part04
include/: StringGenerator.hpp  StringSortAlgorithms.hpp  StringSortTester.hpp
report/: REPORT.md
src/: StringGenerator.cpp  StringSortAlgorithms.cpp  StringSortTester.cpp  main.cpp
submissions/: A1m.cpp  A1q.cpp  A1r.cpp  A1rq.cpp
tools/: plot_results.py
